--- a/index.qmd
+++ b/index.qmd
@@ -1,21 +1,21 @@
 ---
-title: "Human Factors in Safety-critical Automation"
-subtitle: "Davide Gentile"
+title: "Davide Gentile"
+#subtitle: "Davide Gentile"
 about:
-  template: solana
+  template: trestles
   #image: images/aiinnuclear.jpg
   #image-width: 11em
   #image-shape: round
-  links:
+  #links:
     #- text: Projects
       #href: projects.qmd
       #icon: boxes
-    - text: Read my memos
-      href: blog.qmd
-      icon: pencil
+    #- text: Read my memos
+      #href: blog.qmd
+      #icon: pencil
     #- text: Courses
       #href: courses.qmd
       #icon: clipboard-data
 ---
 
-I help organizations understand how automation impacts human performance in safety-critical systems. Lately, I\'ve been exploring how AI can be leveraged in nuclear environments to improve operational efficiency and augment human work.
+I help you asses the potential benefits and drawbacks of introducing automation in safety-critical tasks and processes. Lately, I've been exploring how AI can be leveraged in nuclear environments to improve operational efficiency and augment human work.
