--- a/blog.qmd
+++ b/blog.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Thoughts"
-subtitle: "Short reflections on human–AI interaction, design failures, and current thinking."
+#subtitle: "Short reflections on human–AI interaction, design failures, and current thinking."
 #listing:
   #contents: blogposts
   #sort: "date desc"
@@ -10,7 +10,7 @@ subtitle: "Short reflections on human–AI interaction, design failures, and cur
   #sort-ui: false
   #filter-ui: false
 #page-layout: full
-title-block-banner: false
+title-block-banner: true
 ---
 
 -   2025-05-17
