--- a/index.qmd
+++ b/index.qmd
@@ -1,27 +1,51 @@
 ---
 title: "Davide Gentile"
-subtitle: "Integrating AI into people's work and lives"
+subtitle: "Designing AI tools that amplify, augment, empower, and enhance human performance"
 about:
-  template: jolla
+  template: solana
   #image: images/profile2.jpg
   #image-width: 7em
   #image-shape: round
-  links:
-    - text: Consulting
-      href: services.qmd
-      icon: boxes
-    - text: Publications
-      href: blog.qmd
-      icon: layers
-    - text: Thoughts
-      href: blog.qmd
-      icon: body-text
+  #links:
+    #- text: Consulting
+      #href: services.qmd
+      #icon: boxes
+    #- text: Publications
+      #href: blog.qmd
+      #icon: layers
+    #- text: Thoughts
+      #href: blog.qmd
+      #icon: body-text
 ---
 
-I'm a human factors researcher focused on decision automation. I design systems, workflows, and products that support task performance, reduce time on the task, and manage workload.
+I help organizations evaluate and improve how people interact with AI systems in high-risk environments. That means identifying breakdowns in trust, usability, and decision quality. I leverage my background in experimental human factors to test what works.
 
-Currently, I lead experimental research in nuclear operations at the Cognitive Engineering Lab, University of Toronto. Previously, I was AI risk consultant at Armilla AI, researcher in human--ML interaction at the Schwartz Reisman Institute, and research intern at Ericsson's Global AI Accelerator.
+I work with organizations deploying AI in safety-critical workflows, teams building explainable decision-support tools, and researchers designing human--automation studies.
+
+**How I can help:**
+
+-   Audit and analysis of human--AI workflows (trust, reliability, workload)
+
+-   Design and interpretation of behavioral experiments
+
+-   Advising on explainability, human--ML interaction, and decision support UX
+
+-   Collaborative research and white papers
+
+Currently, I lead experimental research in nuclear operations at the Cognitive Engineering Lab, University of Toronto. Previously, I was AI risk consultant at Armilla AI, researcher in human-ML interaction at the Schwartz Reisman Institute, and research intern at Ericsson's Global AI Accelerator.
 
 I recently completed a PhD on explainable AI, studying how machine learning explanations affect human reliance on automated results.
 
-I'm interested in concrete problems in human--automation interaction. I try to avoid hype and doom-talk.
+I'm interested in concrete problems in human-automation interaction. I try to avoid hype and doom-talk.
+
+**Get in touch**
+
+If you want to discuss collaboration, consulting, or have questions about my research, feel free to reach out: gentiledv at gmail dot com
+
+<!-- I'm a human factors researcher focused on decision automation. I design systems, workflows, and products that support task performance, reduce time on the task, and manage workload. -->
+
+<!-- Currently, I lead experimental research in nuclear operations at the Cognitive Engineering Lab, University of Toronto. Previously, I was AI risk consultant at Armilla AI, researcher in human--ML interaction at the Schwartz Reisman Institute, and research intern at Ericsson's Global AI Accelerator. -->
+
+<!-- I recently completed a PhD on explainable AI, studying how machine learning explanations affect human reliance on automated results. -->
+
+<!-- I'm interested in concrete problems in human--automation interaction. I try to avoid hype and doom-talk. -->
