--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Davide Gentile"
-subtitle: "Designing AI tools that amplify, augment, empower, and enhance human performance"
+subtitle: "Designing AI tools for human performance"
 about:
   template: solana
   #image: images/profile2.jpg
@@ -18,9 +18,9 @@ about:
       #icon: body-text
 ---
 
-I help organizations evaluate and improve how people interact with AI systems in high-risk environments. That means identifying breakdowns in trust, usability, and decision quality. I leverage my background in experimental human factors to test what works.
+I help organizations improve how people interact with AI systems in high-risk environments by identifying breakdowns in trust, usability, and decision quality. My approach is grounded in experimental human factors methods.
 
-I work with organizations deploying AI in safety-critical workflows, teams building explainable decision-support tools, and researchers designing human--automation studies.
+I work with teams deploying AI in safety-critical workflows, building explainable decision-support tools, or researching human--automation interaction.
 
 **How I can help:**
 
@@ -32,15 +32,13 @@ I work with organizations deploying AI in safety-critical workflows, teams build
 
 -   Collaborative research and white papers
 
-Currently, I lead experimental research in nuclear operations at the Cognitive Engineering Lab, University of Toronto. Previously, I was AI risk consultant at Armilla AI, researcher in human-ML interaction at the Schwartz Reisman Institute, and research intern at Ericsson's Global AI Accelerator.
+Currently, I lead experimental research in nuclear operations at the Cognitive Engineering Lab, University of Toronto. Past roles include AI risk consultant at Armilla AI, human--ML interaction researcher at the Schwartz Reisman Institute, and intern at Ericsson's Global AI Accelerator.
 
 I recently completed a PhD on explainable AI, studying how machine learning explanations affect human reliance on automated results.
 
-I'm interested in concrete problems in human-automation interaction. I try to avoid hype and doom-talk.
+I'm interested in concrete problems in human-automation interaction, and try to avoid hype and doom-talk.
 
-**Get in touch**
-
-If you want to discuss collaboration, consulting, or have questions about my research, feel free to reach out: gentiledv at gmail dot com
+**Get in touch:** gentiledv at gmail dot com
 
 <!-- I'm a human factors researcher focused on decision automation. I design systems, workflows, and products that support task performance, reduce time on the task, and manage workload. -->
 
