--- a/blog.qmd
+++ b/blog.qmd
@@ -16,3 +16,7 @@ title-block-banner: false
 -   May 2025
 
 [Contemporary problems in science and possible paths forward.](boh.qmd)
+
+-   May 2025
+
+[What is experimental human fact](posts/exp-hf.qmd)
